# time-module-rs

./: .gitignore  Cargo.toml  README.MD  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
1.cargo/: config.toml
examples/: README.md
examples/c/: test_time.c
examples/cpp/: test_time.cpp
examples/csharp/: TestTime.cs
examples/delphi/: TestTime.dpr
examples/go/: test_time.go
examples/java/: TestTime.java
examples/nodejs/: test_time.js
examples/python/: test_time.py
examples/rust/: test_time.rs
examples/vbnet/: TestTime.vb
release/: time_module_x64.lib  time_module_x86.lib
resources/: api_config.txt  countries_tz.txt  dst_rules.txt  ntp_servers.txt  tz_offsets.txt
src/: error.rs  error_string.rs  lib.rs  resources.rs  time_api.rs
src/resources/: embedded.rs  external.rs  mod.rs  parsers.rs
src/time/: config.rs  defines.rs  mod.rs  tz_country.rs  tz_name.rs
src/time/calc/: calendar.rs  convert.rs  days.rs  jd.rs  mod.rs  sync.rs  tests.rs  weekday.rs
src/time/chinese/: astronomy.rs  lunar.rs  mod.rs  sizhu.rs
src/time/core/: local.rs  mod.rs  provider.rs
src/time/dst/: calculator.rs  mod.rs  provider.rs  rule.rs  system.rs
src/time/git/: local.rs  mod.rs  provider.rs
src/time/handle/: compare.rs  (+2 more)
src/time_api/: async_ntp.rs  calendar.rs  consts.rs  core_time.rs  date_utils.rs  error_handling.rs  formatting.rs  globals.rs  handle.rs  helpers.rs  leap_second.rs  logging.rs  mod.rs  ntp.rs  shutdown.rs  timezone_dst.rs  types.rs  unix_timestamp.rs  version.rs  weekday.rs
test/: error_code_tests.rs  ntp_integration.rs
(+15 files in other folders)
