[package]
name = "time_module"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-only"
authors = ["Setinne"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 0

# 不要添加任何依赖