[package]
name = "time_module"
version = "0.2.6"
edition = "2021"
license = "LGPL-2.1-only"
authors = ["Setinne"]
rust-version = "1.64"
description = "A high-precision NTP time & timezone library for Windows (Vista+)"
documentation = "https://github.com/setinne/time-module-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 0

# 无任何依赖
